--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="main-container">
-    <img src="./assets/images/image-omelette.jpeg" alt="Omlette Image">
+    <img src="./assets/images/image-omelette.jpeg" alt="Omlette">
  <h1> Simple Omelette Recipe</h1>
  <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
@@ -72,12 +72,5 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://facebook.com/ayo.areo.90" target="_blank">Areo Ayomide Philip</a>
   </div>
-
-  <div class="small-screen">
-    <h1>This Page Cant be Display</h1>
-    <p>Due to your screen smaller than 350px, this page wont be able to be display on your browser. We regret you been unable to view our website. We would work to make it available for you screen very soon.</p>
-  </div>
-
-
 </body>
 </html>
